Added remaining OctagonDashboard Views

--- a/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
@@ -20,7 +20,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="@Url.Action("BeComm", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
                         <i class="fa fa-desktop fa-fw"></i> BeComm
                     </a>
                 </li>
@@ -30,28 +30,28 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="@Url.Action("AVT", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
                         <i class="fa fa-desktop fa-fw"></i> AVT
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="fa fa-desktop fa-fw"></i> Demmoney
+                    <a href="@Url.Action("DemMoney", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
+                        <i class="fa fa-desktop fa-fw"></i> DemMoney
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="@Url.Action("CashEverywhere", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
                         <i class="fa fa-desktop fa-fw"></i> Cash Everywhere
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="@Url.Action("VendBot", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
                         <i class="fa fa-desktop fa-fw"></i> VendBot
                     </a>
                 </li>
                 <li>
-                    <a href="#">
-                        <i class="fa fa-desktop fa-fw"></i> Micro Loan
+                    <a href="@Url.Action("MicroLoans", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
+                        <i class="fa fa-desktop fa-fw"></i> Micro Loans
                     </a>
                 </li>
             </ul>
