--- a/OctagonPlatform/Views/Octagon/VendBot.cshtml
+++ b/OctagonPlatform/Views/Octagon/VendBot.cshtml
@@ -1,15 +1,15 @@
 ﻿@{
-    ViewBag.Title = "ATM Management Studio";
+    ViewBag.Title = "VendBot";
     Layout = "~/Views/Shared/_LayoutOctagonDashboard.cshtml";
 }
 
 @*@Styles.Render("~/Content/bootstrap-lumen.css")*@
 
 <div class="row">
-    <a href="@Url.Action("Index", "Dashboard", new {logo = ViewBag.Logo, businessName = ViewBag.BusinessName})">
+    <a href="@Url.Action("VendBot", "Octagon", new {logo = ViewBag.Logo, businessName = ViewBag.BusinessName})">
         <div class="col-lg-12" style="width: 500px">
             <h1 class="page-header" style="color: #859298; font-size: 30px;">
-                <i class="fa fa-dashboard" style="font-size: 25px; color: #859298"></i> ATM Management Studio
+                <i class="fa fa-dashboard" style="font-size: 25px; color: #859298"></i> VendBot
             </h1>
         </div>
     </a>
