--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -18,6 +18,7 @@
 @Scripts.Render("~/Octagon/assets/vendor/raphael/raphael.min.js")
 @Scripts.Render("~/Octagon/assets/vendor/morrisjs/morris.min.js")
 @Scripts.Render("~/Octagon/assets/data/morris-data.js")
+@Scripts.Render("~/Octagon/assets/data/demmoney-data.js")
 @Scripts.Render("~/Octagon/assets/vendor/dist/js/sb-admin-2.js")
 
 @Scripts.Render("~/bundles/jqueryui")
