--- a/OctagonPlatform/Views/Octagon/DemMoney.cshtml
+++ b/OctagonPlatform/Views/Octagon/DemMoney.cshtml
@@ -19,19 +19,19 @@
     <div class="col-lg-8">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa fa-bar-chart-o fa-fw"></i> Area Chart
+                <i class="fa fa-bar-chart-o fa-fw"></i> Investments
                 
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-                <div id="morris-area-chart"></div>
+                <div id="demmoney-area-chart"></div>
             </div>
             <!-- /.panel-body -->
         </div>
         <!-- /.panel -->
         <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa fa-bar-chart-o fa-fw"></i> Bar Chart
+                <i class="fa fa-bar-chart-o fa-fw"></i> Revenues
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="col-lg-8">
-                        <div id="morris-bar-chart"></div>
+                        <div id="demmoney-bar-chart"></div>
                     </div>
                     <!-- /.col-lg-8 (nested) -->
                 </div>
@@ -59,10 +59,10 @@
         <!-- /.panel -->
         <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa fa-bar-chart-o fa-fw"></i> Donut Chart
+                <i class="fa fa-bar-chart-o fa-fw"></i> Trades
             </div>
             <div class="panel-body">
-                <div id="morris-donut-chart"></div>
+                <div id="demmoney-donut-chart"></div>
                 <a href="#" class="btn btn-default btn-block">View Details</a>
             </div>
             <!-- /.panel-body -->
