--- a/OctagonPlatform/Views/Home/Index.cshtml
+++ b/OctagonPlatform/Views/Home/Index.cshtml
@@ -121,7 +121,7 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
     <br>
     <br>
     <div class="container">
-        <a id="contact"> </a>
+        
         <div class="modal fade" role="dialog" tabindex="-1" id="modal1">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
@@ -175,7 +175,7 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
                             </div>
                         </div>
                         <div class="col-sm-6" style="padding-top: 8px;">
-                            <div class="form-group">
+                            <div class="form-group"style="margin-left: 0px;">
                                 <label class="control-label" for="calltime">Best Time to Call</label>
                                 <select class="form-control" name="Call Time" id="calltime">
                                     <option value="Morning" selected>Morning</option>
@@ -189,7 +189,7 @@ Layout = "~/Views/Shared/_LayoutOctagon.cshtml";
                         <label class="control-label" for="comments">Comments</label>
                         <textarea class="form-control" rows="5" name="Comments" placeholder="Enter comments here" id="comments"></textarea>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group"style="margin-left: 0px;">
                         <button class="btn btn-primary btn-block" type="submit">Send <i class="fa fa-chevron-circle-right"></i></button>
                     </div>
                     <hr class="visible-xs-block visible-sm-block" />
