--- a/OctagonPlatform/Views/Octagon/Cryptoxone.cshtml
+++ b/OctagonPlatform/Views/Octagon/Cryptoxone.cshtml
@@ -181,7 +181,7 @@
             ],
             xkey: 'y',
             ykeys: ['a', 'b'],
-            labels: ['Series A', 'Series B'],
+            labels: ['Buy', 'Sell'],
             resize: true
         });
     </script>
