--- a/OctagonPlatform/Views/Octagon/MicroLoans.cshtml
+++ b/OctagonPlatform/Views/Octagon/MicroLoans.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "MicroLoans";
+    ViewBag.Title = "Money For People";
     Layout = "~/Views/Shared/_LayoutOctagonDashboard.cshtml";
 }
 
@@ -9,7 +9,7 @@
     <a href="@Url.Action("MicroLoans", "Octagon", new {logo = ViewBag.Logo, businessName = ViewBag.BusinessName})">
         <div class="col-lg-12" style="width: 500px">
             <h1 class="page-header" style="color: #859298; font-size: 30px;">
-                <i class="fa fa-dashboard" style="font-size: 25px; color: #859298"></i> MicroLoans
+                <i class="fa fa-dashboard" style="font-size: 25px; color: #859298"></i> Money For People
             </h1>
         </div>
     </a>
