--- a/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
@@ -25,8 +25,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("Cryptoxone", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> Cryptoxone
+                    <a href="@Url.Action("CryptoXone", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
+                        <i class="fa fa-desktop fa-fw"></i> CryptoXone
                     </a>
                 </li>
                 <li>
@@ -41,7 +41,7 @@
                 </li>
                 <li>
                     <a href="@Url.Action("CashEverywhere", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> Cash Everywhere
+                        <i class="fa fa-desktop fa-fw"></i> CEW
                     </a>
                 </li>
                 <li>
@@ -51,7 +51,7 @@
                 </li>
                 <li>
                     <a href="@Url.Action("MicroLoans", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> Micro Loans
+                        <i class="fa fa-desktop fa-fw"></i> MFP
                     </a>
                 </li>
             </ul>
