--- a/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/OctagonSidebar.cshtml
@@ -16,42 +16,42 @@
                 </li>
                 <li>
                     <a href="@Url.Action("AMS", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-dashboard fa-fw"></i> AMS
+                         AMS
                     </a>
                 </li>
                 <li>
                     <a href="@Url.Action("BeComm", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> BeComm
+                         BeComm
                     </a>
                 </li>
                 <li>
                     <a href="@Url.Action("CryptoXone", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> CryptoXone
+                         CryptoXone
                     </a>
                 </li>
                 <li>
                     <a href="@Url.Action("AVT", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> AVT
+                        AVT
                     </a>
                 </li>
                 <li>
                     <a href="@Url.Action("DemMoney", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> DemMoney
+                         DemMoney
                     </a>
                 </li>
                 <li>
                     <a href="@Url.Action("CashEverywhere", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> CEW
+                         CEW
                     </a>
                 </li>
                 <li>
                     <a href="@Url.Action("VendBot", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> VendBot
+                         VendBot
                     </a>
                 </li>
                 <li>
                     <a href="@Url.Action("MicroLoans", "Octagon", new { logo = ViewBag.Logo, businessName = ViewBag.BusinessName })">
-                        <i class="fa fa-desktop fa-fw"></i> MFP
+                         MFP
                     </a>
                 </li>
             </ul>
