--- a/OctagonPlatform/Views/Octagon/Cryptoxone.cshtml
+++ b/OctagonPlatform/Views/Octagon/Cryptoxone.cshtml
@@ -8,7 +8,7 @@
     <a href="Http://www.cryptoxone.com" target="_blank">
         <div class="col-lg-12" style="width: 500px">
             <h1 class="page-header" style="color: #859298; font-size: 30px;">
-                <i class="fa fa-dashboard" style="font-size: 25px; color: #859298"></i> CryptoXone
+                 CryptoXone
             </h1>
         </div>
     </a>
