--- a/OctagonPlatform/Views/Octagon/VendBot.cshtml
+++ b/OctagonPlatform/Views/Octagon/VendBot.cshtml
@@ -9,7 +9,7 @@
     <a href="@Url.Action("VendBot", "Octagon", new {logo = ViewBag.Logo, businessName = ViewBag.BusinessName})">
         <div class="col-lg-12" style="width: 500px">
             <h1 class="page-header" style="color: #859298; font-size: 30px;">
-                <i class="fa fa-dashboard" style="font-size: 25px; color: #859298"></i> VendBot
+                 VendBot
             </h1>
         </div>
     </a>
