--- a/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/GeneralInfo.cshtml
@@ -1,14 +1,19 @@
-﻿@model OctagonPlatform.Models.Terminal
+﻿@model OctagonPlatform.Models.FormsViewModels.TerminalGeneralVM
 
-
-<div id="getGeneralInfo" class="panel-collapse collapse">
-
+@{
+    if (ViewBag.Error != null)
+    {
+        <p class="alert alert-danger">
+            <strong>Error: @ViewBag.Error</strong>
+        </p>
+    }
+}
     <table class="table table-striped table-hover ">
         <tbody>
             <tr class="info">
 
                 <th>Business Name: </th>
-                <th>@*@Model.Partner.BusinessName*@</th>
+                <th>@Model.Partner.BusinessName</th>
             </tr>
             <tr class="info">
 
@@ -18,7 +23,7 @@
             <tr class="info">
 
                 <th>Location Type:</th>
-                <th>@*@Model.LocationType.Name*@</th>
+                <th>@Model.LocationType.Name</th>
             </tr>
             <tr class="info">
 
@@ -33,12 +38,12 @@
             <tr class="info">
 
                 <th>Country:</th>
-                <th>@*@Model.Country.Name*@</th>
+                <th>@Model.Country.Name</th>
             </tr>
             <tr class="info">
 
                 <th>State:</th>
-                <th>@*@Model.State.Name*@</th>
+                <th>@Model.State.Name</th>
             </tr>
             @if (Model.City != null)
             {
@@ -81,12 +86,12 @@
             <tr class="info">
 
                 <th>Make:</th>
-                <th>@*@Model.Make.Name*@</th>
+                <th>@Model.Make.Name</th>
             </tr>
             <tr class="info">
 
                 <th>Model:</th>
-                <th>@*@Model.Model.Name*@</th>
+                <th>@Model.Model.Name</th>
             </tr>
             <tr class="info">
 
@@ -107,9 +112,8 @@
                 {
                     Id = Model.Id
                 },
-                htmlAttributes: new { @class = "btn btn-primary" }
+                htmlAttributes: new { @class = "btn btn-info btn-microsoft" }
                 )
             </li>
         </ul>
     </div>
-</div>
