update cassettes design y terminal detaisl modif modal edit ans add

--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -98,7 +98,7 @@
                    })
                     </h3>
                 </div>
-                <div id="getCassettes" class="panel-collapse collapse">
+                <div id="getCassettes" class="panel-collapse collapse " style="margin: 15px;">
                     <div class="panel-body">
                         <div class="loader"></div>
                     </div>
