inicie con reprot schedule

--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -1,5 +1,4 @@
-﻿
-  <!-- /#wrapper -->
+﻿<!-- /#wrapper -->
 
 
 
@@ -7,6 +6,7 @@
 
 
 @Scripts.Render("~/Scripts/jquery-3.1.1.min.js")
+
 @Scripts.Render("~/Scripts/datatables/datatables.min.js")
 
 @Scripts.Render("~/Octagon/assets/bootstrap/dist/js/bootstrap.min.js")
@@ -23,6 +23,9 @@
 @Scripts.Render("~/bundles/jqueryui")
 @Scripts.Render("~/Scripts/export.js")
 @Scripts.Render("~/Content/quicksearch/dist/jquery.quicksearch.min.js")
+
+
+@Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
 
 
 
